<resources>
    <string name="app_name">Pizzala</string>
    <string name="create_order">Create Order</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">HOME</string>
    <string name="pizza_tab">PIZZA</string>
    <string name="pasta_tab">PASTA</string>
    <string name="store_tab">STORE</string>
    <string name="top_fragment_page">Top fragment page</string>
    <string name="history">The history of pizza begins in antiquity,
        when various ancient cultures produced basic
        flatbreads with several toppings.A precursor
        of pizza was probably the focaccia,
        a flat bread known to the Romans as panis
        focacius, to which toppings were then
        added. Modern pizza evolved from similar flatbread
        dishes in Naples, Italy, in the 18th or early
        19th century.The word pizza was first documented
        in A.D. 997 in Gaeta and successively in different
        parts of Central and Southern Italy. </string>
    <string name="enter_order">Enter Order</string>
    <string name="enter_name">Enter Name</string>
    <string name="user_name">katomakhin@mail.ru</string>
    <string name="nav_inbox">Messages</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_send">Sent messages</string>
    <string name="nav_trash">In da Trash</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="bav_feedback">Feedback</string>
    <string name="nav_order">Order</string>
    <string name="favorite">Favorite</string>

</resources>